fixed pixel gap when intro has non-integer height

--- a/css/home.scss
+++ b/css/home.scss
@@ -9,6 +9,7 @@ body,
   min-height: 50vh;
   background-color: $white;
   color: $black;
+  position: relative;
 }
 #about {
   flex-grow: 1;
@@ -21,7 +22,8 @@ body,
 #uparrow {
   width: 100%;
   height: 55px;
-  margin: 0;
+  margin: unset;
+  -webkit-margin-before: 0px;-webkit-margin-after: 0px;
 }
 @media only screen and (min-width: 600px) {
   /* For tablets: */
@@ -48,6 +50,15 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.button{
+.button {
   margin: 0 auto 1em auto;
+}
+#subPixelFix{
+  position: absolute;
+  bottom: -0.5px;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: $black;
+  margin: 0;
 }
